chapters/chapter4/nats/nats-passthrough-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: nats-passthrough-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 31400
      name: tcp-nats
      protocol: TLS
    hosts:
    - "*"
    tls:
      mode: PASSTHROUGH
